--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ docstring_parser==0.17.0
 docutils==0.22.2
 email-validator==2.3.0
 evaluate==0.4.6
+eventkit==1.0.3
 exceptiongroup==1.3.0
 fastapi==0.118.0
 fastmcp==2.12.4
@@ -48,6 +49,7 @@ httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.1
 huggingface-hub==0.35.3
+ib-insync==0.9.86
 idna==3.10
 importlib_metadata==8.7.0
 isodate==0.7.2
@@ -72,6 +74,7 @@ more-itertools==10.8.0
 mpmath==1.3.0
 multidict==6.6.4
 multiprocess==0.70.16
+nest-asyncio==1.6.0
 networkx==3.5
 numpy==2.3.3
 openapi-core==0.19.5
@@ -90,6 +93,7 @@ pillow==11.3.0
 propcache==0.4.0
 protobuf==6.32.1
 psutil==7.1.0
+psycopg2-binary==2.9.11
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -116,7 +120,7 @@ rsa==4.9.1
 safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.16.2
--e git+https://github.com/Utkarsh-M13/Sentiment-Analysis-Trader.git@db68151548dd3744a128e44ee5e30677bd31ea5e#egg=Sentiment_Analysis_Trader
+-e git+https://github.com/Utkarsh-M13/Sentiment-Analysis-Trader.git@089111f1aada509baff436808694046e2aba28ac#egg=Sentiment_Analysis_Trader
 setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
